--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,7 @@ input[type="checkbox"]:checked:before {
   height: 30px;
   border-radius: 8px 8px 0 0;
   padding-left: 10px;
+  width: 100%;
   box-shadow: 20px 20px #b9c2ca;
 }
 
@@ -310,12 +311,15 @@ input[type="checkbox"]:checked:before {
   padding: 10px;
   box-sizing: border-box;
   position: absolute;
-  width: 100%px;
+  width: 95.8%;
   top: 30px;
   bottom: 0;
   overflow: auto;
   box-shadow: 20px 20px #222529;
   margin-right: 30px;
+  display: block;
+  flex: initial;
+
 }
 .frost {
   color:#81A1C1;
@@ -333,6 +337,93 @@ input[type="checkbox"]:checked:before {
 }
 .yellow {
   color: yellow;
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+          
+#carousel, #navigation {
+  flex: initial;
+  display: block;
+}
+          
+#carousel {
+  overflow: hidden;
+  width: 600px;
+  height: 400px;
+  border-radius: 4px;
+  background-color: #fff;
+}
+          
+.p-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.4s ease-in-out;
+}
+          
+#button_a:checked ~ #carousel .p-wrapper {
+  -webkit-transform: translateY(0);
+  transform: translateY(0); 
+}
+          
+#button_b:checked ~ #carousel .p-wrapper {
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%); 
+}
+
+#button_c:checked ~ #carousel .p-wrapper {
+  -webkit-transform: translateY(-200%);
+  transform: translateY(-200%); 
+}
+
+#button_d:checked ~ #carousel .p-wrapper {
+  -webkit-transform: translateY(-300%);
+  transform: translateY(-300%); 
+}
+          
+[class^="panel_"] {
+  overflow: auto;
+  position: relative;
+  width: inherit;
+  height: inherit;
+  padding: 48px;
+}
+          
+#navigation {
+  margin-left: 24px;
+}
+
+[class^="label_"] {
+  display: block;
+  cursor: pointer;
+  margin: 8px 0;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  border-radius: 4px;
+  color: #aaa;
+  background-color: #fff;
+  transition: all 0.3s ease;
+}
+          
+[class^="label_"]:hover {
+  color: #444;
+  background-color: #ffeed9;
+}
+          
+#button_a:checked ~ #navigation .label_a,
+#button_b:checked ~ #navigation .label_b,
+#button_c:checked ~ #navigation .label_c,
+#button_d:checked ~ #navigation .label_d {
+   cursor: default;
+   color: #fff;
+   background-color: #222;
 }
 
 /* Fourth section */
