--- a/styles.css
+++ b/styles.css
@@ -261,18 +261,20 @@ input[type="checkbox"]:checked:before {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#About .terminal-window{
-  width: 100%;
-  height: 850px;
-  margin-bottom: 5%;
-  position: relative;
-  padding-left: 20px;
-  padding-right: 30px;
+#about .maincontainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-#About .terminal-window header {
+
+#About header {
   background: #E0E8F0;
   height: 30px;
   border-radius: 8px 8px 0 0;
@@ -281,7 +283,7 @@ input[type="checkbox"]:checked:before {
   box-shadow: 20px 20px #b9c2ca;
 }
 
-#About .terminal-window header .button {
+#About header .button {
   width: 12px;
   height: 12px;
   margin: 10px 4px 0 0;
@@ -289,20 +291,30 @@ input[type="checkbox"]:checked:before {
   border-radius: 8px;
 }
 
-#About .terminal-window header .button.green {
+#About header .button.green {
   background: #3BB662;
 }
 
-#About .terminal-window header .button.yellow {
+#About header .button.yellow {
   background: #E5C30F;
 }
 
-#About .terminal-window header .button.red {
+#About header .button.red {
   background: #E75448;
   cursor: pointer;
 }
 
-#About .terminal-window section.terminal {
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+}
+
+
+
+#About #carousel {
   color: rgb(255, 255, 255) !important;
   font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
   font-size: 12pt !important;
@@ -310,16 +322,11 @@ input[type="checkbox"]:checked:before {
   border-radius: 0px 0px 8px 8px;
   padding: 10px;
   box-sizing: border-box;
-  position: absolute;
-  width: 95.8%;
-  top: 30px;
-  bottom: 0;
-  overflow: auto;
+  height: 450px;
   box-shadow: 20px 20px #222529;
-  margin-right: 30px;
-  display: block;
-  flex: initial;
-
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
 }
 .frost {
   color:#81A1C1;
@@ -337,27 +344,7 @@ input[type="checkbox"]:checked:before {
 }
 .yellow {
   color: yellow;
-}
-
-#container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-          
-#carousel, #navigation {
-  flex: initial;
-  display: block;
-}
-          
-#carousel {
-  overflow: hidden;
-  width: 600px;
-  height: 400px;
-  border-radius: 4px;
-  background-color: #fff;
-}
+}         
           
 .p-wrapper {
   position: relative;
@@ -395,7 +382,7 @@ input[type="checkbox"]:checked:before {
 }
           
 #navigation {
-  margin-left: 24px;
+  padding-left: 50px;
 }
 
 [class^="label_"] {
